<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.PromoteFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/menu_item_promote" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fieldVideoLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/video_link" />

    <Button
        android:id="@+id/windUp100LikesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind_up_likes_50" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_order_heart" />
</LinearLayout>